--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon ./index.js",
-    "watch": "browser-sync start --config bs-config.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "watch": "browser-sync start --config bs-config.js"
   },
   "keywords": [],
   "author": "",
