--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,39 +1,27 @@
-name: github pages
+name: Node.js CI
 
 on:
-    push:
-        branches:
-        - master
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 
 jobs:
-    deploy:
-        runs-on: ubuntu-18.04
-        steps:
-        - uses: actions/checkout@v2
+  build:
 
-        - name: Setup Node
-            uses: actions/setup-node@v2-beta
-            with:
-            node-version: '12'
+    runs-on: ubuntu-latest
 
-        - name: Get yarn cache
-            id: yarn-cache
-            run: echo "::set-output name=dir::$(yarn cache dir)"
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
 
-        - name: Cache dependencies
-            uses: actions/cache@v2
-            with:
-            path: ${{ steps.yarn-cache.outputs.dir }}
-            key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
-            restore-keys: |
-                ${{ runner.os }}-yarn-
-        - run: yarn install --frozen-lockfile
-        - run: yarn build
-            env:
-            REACT_APP_GIT_SHA: ${{ github.SHA }}
-
-        - name: Deploy
-            uses: peaceiris/actions-gh-pages@v3
-            with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./build
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install dependencies
+        run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
