--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon ./index.js",
     "watch": "browser-sync start --config bs-config.js",
     "predeploy": "npm run build",
+    "build": "webpack",
     "deploy": "gh-pages -d build"
   },
   "keywords": [],
@@ -16,7 +17,9 @@
   "devDependencies": {
     "browser-sync": "^2.27.5",
     "gh-pages": "^3.2.3",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "webpack": "^5.59.1",
+    "webpack-cli": "^4.9.1"
   },
   "dependencies": {
     "express": "^4.17.1",
